modify scribe
